# MIT_MOT_experiment

./: .gitignore  README.md  data_output_format_doc.md  environment.yml  pyproject.toml  requirements.txt  requirements_no_cuda.txt  run.py  run_postanalyse.py  setup.py
mitmotexperiment/: Experiment.py  MIT.py  MOT.py  ParticipantForm.py  Trial.py
pose_estimation/: body3d_img2pose_demo.py  inferencer_demo.py
postprocessing/: analyze_csv.py  analyze_csv_v2.py  camera_calibration.py  elbow_metric.py  elbow_metric_comphresive.py  format_output.py  key_map.py  kinematic_metrics.py
utils/: camera_set.sh  crop_images.py  draw_bounderies.py  record_video_ffmpg.sh
