[project]
name = "mit-mot-experiment"
version = "0.1.0"
description = "Post analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy<2.0.0",
    "opencv-python>=4.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "statsmodels>=0.14.0",
    "seaborn>=0.12.0",
    "pingouin==0.5.5",
    "openpyxl>=3.1.0",
]

[tool.uv]
package = false
